<resources>
    <string name="app_name">GeoPay</string>
    <string name="geo_welcome">Welcome! Enter your user name and password to start :)</string>
    <string name="geo_user">user name</string>
    <string name="geo_next">Next</string>
    <string name="geo_ch_area">Choose Area:</string>
    <string name="geo_ch_merch">Choose merchants:</string>
    <string name="geo_sub">Subscribe</string>
    <string name="geo_succ">You succesfully subscribed to following merchants:</string>
    <string name="geo_pin">Enter your user pin</string>
    <string name="geo_notify_area">You entered GeoPay area</string>
    <string name="geo_if_pay">Click to Pay 10€ to Museum </string>
    <string name="geo_pay_succ">Payment Successfull ^^</string>
    <string name="geo_pay_success_content">Payment has been received, thank you!</string>
    <string-array name="geo_mock_areas">
        <item>City</item>
        <item>Frankfurt</item>
        <item>London</item>
        <item>Warsaw</item>
        <item>Paris</item>
    </string-array>
    <string-array name="geo_mock_merchants">
        <item>Museum</item>
        <item>ArtGallery</item>
        <item>RockConcert</item>
        <item>ComedyStandup</item>
        <item>BurgerPlace</item>
        <item>FancyRestaurant</item>
    </string-array>
    <string name="geo_finish">Finish</string>
    <string name="geo_info">You will be notified of possibility to make GeoPay payment when enter those locations.</string>
    <string name="geo_make_payment">Pay</string>
    <string name="geo_cha_name">MainActChannel</string>
    <string name="geo_cha_desc">Main Activity channel description</string>
    <string name="geo_logo">GeoPay.World</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="geo_registered_m">Registered Merchants</string>
    <string name="geo_trans_pending">Pending Transactions</string>
    <string name="geo_trans_history">Transactions History</string>
    <string name="geo_goto_subs">Subscribe to Merchants</string>
    <string name="geo_user_settings">Settings</string>
    <string name="geo_m_rock">RockConcert</string>
    <string name="geo_m_rock_a">City, Fake Street 5</string>
    <string name="geo_m_mus">Museum</string>
    <string name="geo_m_mus_a">Kensignton, Non-existing Building</string>
    <string name="geo_registered_info">You are subscribed to following locations:</string>
    <string name="geo_pass">password</string>
</resources>
